website styling updates

--- a/index.html
+++ b/index.html
@@ -1,8 +1,29 @@
 <!DOCTYPE html>
 <html>
-<body>
-  <title>Fun With Friends - Commands list</title>
-  <h1>Fun With Friends</h1>
-  <h2>Commands list</h2>
-</body>
+  <head>
+    <link rel="stylesheet" href="reset.css">
+    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
+  </head>
+  <body>
+    <div class="outer-container">
+      <div class="inner-container">
+        <header>
+          <img
+            alt="Headline image of mountain view in GTA 5"
+            src="./public/assets/funwithfriends_image.png"
+            width="100%"
+          >
+          <div class="header-nav-container">
+            <nav class="header-nav">
+              <a href="/">Home</a>
+            </nav>
+          </div>
+        </header>
+        <title>Fun With Friends - Commands list</title>
+        <h1>Fun With Friends</h1>
+        <h2>Commands list</h2>
+      </div>
+    </div>
+  </body>
 </html>
