--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
+    <title>Fun With Friends - Commands list</title>
   </head>
   <body>
     <div class="outer-container">
@@ -20,9 +21,46 @@
             </nav>
           </div>
         </header>
-        <title>Fun With Friends - Commands list</title>
         <h1>Fun With Friends</h1>
         <h2>Commands list</h2>
+        <ul class="controls-list"">
+          <li>
+            <div>
+              <h3>Basic controls</h3>
+              <ul class="commands-list">
+                <li>
+                  • <span>A</span> - This command does this
+                </li>
+                <li>
+                  • <span>A</span> - This command does this
+                </li>
+                <li>
+                  • <span>A</span> - This command does this
+                </li>
+              </ul>
+            </div>
+          </li>
+          <li>
+            <div>
+              <h3>FivePD controls</h3>
+            </div>
+          </li>
+          <li>
+            <div>
+              <h3>Vehicle controls</h3>
+            </div>
+          </li>
+          <li>
+            <div>
+              <h3>Chat controls</h3>
+            </div>
+          </li>
+          <li>
+            <div>
+              <h3>Terminal controls</h3>
+            </div>
+          </li>
+        </ul>
       </div>
     </div>
   </body>
