--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
           >
           <div class="header-nav-container">
             <nav class="header-nav">
-              <a href="/">Home</a>
+              <a href="./index.html">Home</a>
             </nav>
           </div>
         </header>
