--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <ul class="controls-list"">
           <li>
             <div>
-              <h3>Basic controls</h3>
+              <h3>Basic keybinds</h3>
               <ul class="commands-list">
                 <li>
                   • <span>A</span> - This command does this
@@ -42,22 +42,67 @@
           </li>
           <li>
             <div>
-              <h3>FivePD controls</h3>
+              <h3>FivePD keybinds</h3>
+              <ul class="commands-list">
+                <li>
+                  • <span>F11</span> - <b>Duty menu</b> (menu to go on and off duty)
+                </li>
+                <li>
+                  • <span>Y</span> - <b>Accept callouts</b> (key to accept callouts from dispatch)
+                </li>
+                <li>
+                  • <span>Z</span> - <b>Callout menu</b> (menu to either request backup from your department, or call a scene/callout as Code 4 or completed)
+                </li>
+                <li>
+                  • <span>G</span> - <b>Scene menu</b> (menu to place objects such as traffic cones or set a speed zone for an area)
+                </li>
+                <li>
+                  • <span>B</span> - <b>Open MDT</b> (key to open MDT while in your vehicle in order to search peds/license plates and write citations/arrest reports)
+                </li>
+                <li>
+                  • <span>F9</span> - <b>Toggle ALPR</b> (while in police cruiser, this key automatic license plate reader will notify you of any vehicles that have flags on their license plate)
+                </li>
+                <li>
+                  • <span>LShift</span> - <b>Traffic stop</b> (positioning your police cruiser behind a vehicle and pressing this key will mark it on the minimap, once marked you can use your lights to signal for it to pull over)
+                </li>
+
+                <li>
+                  • <span>X</span> - <b>Ped interaction menu</b> (menu to interact with pedestrians)
+                </li>
+                <li>
+                  • <span>O</span> - <b>Waypoint to closest jail</b> (set waypoint to closest jail when arrested ped in vehicle)
+                </li>
+                <li>
+                  • <span>E</span> - <b>Place cuffed ped in vehicle</b> (when nearby cuffed ped and vehicle, places them in vehicle)
+                </li>
+                <li>
+                  • <span>Hold E (around 2 sec.)</span> - <b>Stop ped/cuff ped</b> (stops a ped or cuffs a stopped ped)
+                </li>
+                <li>
+                  • <span>LShift + E</span> - <b>Spike strips</b> (when standing by trunk of applicable police vehicle, places spike trips, or picks them up if already placed)
+                </li>
+                <li>
+                  • <span>U</span> - <b>Ped in jail</b> (when near an arrested ped at a jail drop off point, puts them in jail)
+                </li>
+                <li>
+                  • <span>J</span> - <b>ID card panel</b> (after receiving a ped's license, opens the ID card panel)
+                </li>
+              </ul>
             </div>
           </li>
           <li>
             <div>
-              <h3>Vehicle controls</h3>
+              <h3>Vehicle keybinds</h3>
             </div>
           </li>
           <li>
             <div>
-              <h3>Chat controls</h3>
+              <h3>Chat keybinds</h3>
             </div>
           </li>
           <li>
             <div>
-              <h3>Terminal controls</h3>
+              <h3>Terminal keybinds</h3>
             </div>
           </li>
         </ul>
