--- a/index.html
+++ b/index.html
@@ -65,7 +65,6 @@
                 <li>
                   • <span>LShift</span> - <b>Traffic stop</b> (positioning your police cruiser behind a vehicle and pressing this key will mark it on the minimap, once marked you can use your lights to signal for it to pull over)
                 </li>
-
                 <li>
                   • <span>X</span> - <b>Ped interaction menu</b> (menu to interact with pedestrians)
                 </li>
@@ -93,6 +92,46 @@
           <li>
             <div>
               <h3>Vehicle keybinds</h3>
+            </div>
+          </li>
+          <li>
+            <div>
+              <h3>AI backup keybinds</h3>
+              <ul class="commands-list">
+                <li>
+                  • <span>F10</span> - <b>AIBackup menu</b> (menu to go on duty and request backup)
+                </li>
+                <li>
+                  • <span>+ (on num keypad)</span> - <b>Call backup units</b> (key to call backup units when on duty in AIBackup menu)
+                </li>
+                <li>
+                  • <span>-</span> - <b>Dismiss backup units</b> (key to dismiss AI backup once all units are on scene)
+                </li>
+                <li>
+                  • <span>PageDown + aiming at Ped</span> - <b>Backup units stop aiming</b> (this combination will make backup units on scene stop aiming)
+                </li>
+                <li>
+                  • <span>PageUp</span> - <b>Backup exits vehicle</b> (key to make backup units in vehicle stop their car, exit vehicle, and come to your position when key pressed)
+                </li>
+                <li>
+                  • <span>Del</span> - <b>Dismiss backup units</b> (all backup units are dismissed)
+                </li>
+                <li>
+                  • <span>/getout i</span> - <b>Get unit out of vehicle</b> (command to get unit 'i' out of vehicle, i is a number between 1 and max number of backup units, useful if they get stuck)
+                </li>
+                <li>
+                  • <span>/getin i</span> - <b>Get unit into their vehicle</b> (command to get unit 'i' into their vehicle, i is a number between 1 and max number of backup units, useful if they get stuck)
+                </li>
+                <li>
+                  • <span>/onduty</span> - <b>Change duty status</b> (command to change status to "on duty")
+                </li>
+                <li>
+                  • <span>/offduty</span> - <b>Change duty status</b> (command to change status to "off duty")
+                </li>
+                <li>
+                  • <span>/stopNotify</span> - <b>Clear notifications</b> (command to clear top right notifications)
+                </li>
+              </ul>
             </div>
           </li>
           <li>
