wrap up current resource commands list

--- a/index.html
+++ b/index.html
@@ -29,13 +29,10 @@
               <h3>Basic keybinds</h3>
               <ul class="commands-list">
                 <li>
-                  • <span>A</span> - This command does this
+                  • <span>M</span> - <b>vMenu menu</b> (opens vMenu)
                 </li>
                 <li>
-                  • <span>A</span> - This command does this
-                </li>
-                <li>
-                  • <span>A</span> - This command does this
+                  • <span>L</span> - <b>Hide/show chat</b> (hide or show the chat menu)
                 </li>
               </ul>
             </div>
@@ -57,19 +54,10 @@
                   • <span>G</span> - <b>Scene menu</b> (menu to place objects such as traffic cones or set a speed zone for an area)
                 </li>
                 <li>
-                  • <span>B</span> - <b>Open MDT</b> (key to open MDT while in your vehicle in order to search peds/license plates and write citations/arrest reports)
-                </li>
-                <li>
-                  • <span>F9</span> - <b>Toggle ALPR</b> (while in police cruiser, this key automatic license plate reader will notify you of any vehicles that have flags on their license plate)
-                </li>
-                <li>
-                  • <span>LShift</span> - <b>Traffic stop</b> (positioning your police cruiser behind a vehicle and pressing this key will mark it on the minimap, once marked you can use your lights to signal for it to pull over)
-                </li>
-                <li>
                   • <span>X</span> - <b>Ped interaction menu</b> (menu to interact with pedestrians)
                 </li>
                 <li>
-                  • <span>O</span> - <b>Waypoint to closest jail</b> (set waypoint to closest jail when arrested ped in vehicle)
+                  • <span>0 (zero)</span> - <b>Waypoint to closest jail</b> (set waypoint to closest jail when arrested ped in vehicle)
                 </li>
                 <li>
                   • <span>E</span> - <b>Place cuffed ped in vehicle</b> (when nearby cuffed ped and vehicle, places them in vehicle)
@@ -92,6 +80,38 @@
           <li>
             <div>
               <h3>Vehicle keybinds</h3>
+              <ul class="commands-list">
+                <li>
+                  • <span>Q</span> - <b>Toggle police lights</b> (when in police cruiser, toggles lights on and off)
+                </li>
+                <li>
+                  • <span>B</span> - <b>Open MDT</b> (key to open MDT while in your vehicle in order to search peds/license plates and write citations/arrest reports)
+                </li>
+                <li>
+                  • <span>LShift</span> - <b>Traffic stop</b> (positioning your police cruiser behind a vehicle and pressing this key will mark it on the minimap, once marked you can use your lights to signal for it to pull over)
+                </li>
+                <li>
+                  • <span>F9</span> - <b>Toggle ALPR</b> (while in police cruiser, this key automatic license plate reader will notify you of any vehicles that have flags on their license plate)
+                </li>
+                <li>
+                  • <span>X</span> - <b>Traffic stop positioning menu</b> (after pulling over vehicle, opens traffic marker controls to move vehicle)
+                </li>
+                <li>
+                  • <span>1, 2, 3</span> - <b>Siren wails</b> (toggles between primary, secondary, and tertiary siren when police cruiser lights are on)
+                </li>
+                <li>
+                  • <span>O (letter)</span> - <b>Luxart menu</b> (opens the Luxart menu)
+                </li>
+                <li>
+                  • <span>LCTRL</span> - <b>Enable/disable cruise control</b> (after enabling cruise control in the duty menu, this enables or disables cruise control)
+                </li>
+                <li>
+                  • <span>NUM +</span> - <b>Increase cruise control speed</b> (increases the cruise control speed)
+                </li>
+                <li>
+                  • <span>NUM -</span> - <b>Decrease cruise control speed</b> (decreases the cruise control speed)
+                </li>
+              </ul>
             </div>
           </li>
           <li>
@@ -102,10 +122,10 @@
                   • <span>F10</span> - <b>AIBackup menu</b> (menu to go on duty and request backup)
                 </li>
                 <li>
-                  • <span>+ (on num keypad)</span> - <b>Call backup units</b> (key to call backup units when on duty in AIBackup menu)
+                  • <span>NUM +</span> - <b>Call backup units</b> (key to call backup units when on duty in AIBackup menu)
                 </li>
                 <li>
-                  • <span>-</span> - <b>Dismiss backup units</b> (key to dismiss AI backup once all units are on scene)
+                  • <span>NUM -</span> - <b>Dismiss backup units</b> (key to dismiss AI backup once all units are on scene)
                 </li>
                 <li>
                   • <span>PageDown + aiming at Ped</span> - <b>Backup units stop aiming</b> (this combination will make backup units on scene stop aiming)
@@ -137,11 +157,30 @@
           <li>
             <div>
               <h3>Chat keybinds</h3>
+              <ul class="commands-list">
+                <li>
+                  • <span>/eup</span> - <b>Emergency Uniforms Pack menu</b> (opens EUP menu to allow you to customize gear and outfits)
+                </li>
+              </ul>
             </div>
           </li>
           <li>
             <div>
               <h3>Terminal keybinds</h3>
+              <ul class="commands-list">
+                <li>
+                  • <span>quit</span> - <b>Quit FiveM</b> (quits the game)
+                </li>
+                <li>
+                  • <span>disconnect</span> - <b>Return to FiveM main menu</b> (disconnects from server and returns to main menu)
+                </li>
+                <li>
+                  • <span>restart &lt;resource_name&gt;</span> - <b>Restart resource</b> (restarts the specified resource)
+                </li>
+                <li>
+                  • <span>refresh</span> - <b>Refreshes all resources</b> (refreshes and loads all resource changes)
+                </li>
+              </ul>
             </div>
           </li>
         </ul>
