update documentation after adding FivePD plugins

--- a/index.html
+++ b/index.html
@@ -74,6 +74,9 @@
                 <li>
                   • <span>J</span> - <b>ID card panel</b> (after receiving a ped's license, opens the ID card panel)
                 </li>
+                <li>
+                  • <span>F4</span> - <b>Portable MDT</b> (opens the portable MDT while in the field)
+                </li>
               </ul>
             </div>
           </li>
