start section for lspdfr

--- a/lib/lspdfr/lspdfr.html
+++ b/lib/lspdfr/lspdfr.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" href="reset.css">
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="../../reset.css">
+    <link rel="stylesheet" href="../../index.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
     <title>Fun With Friends - Commands list</title>
   </head>
@@ -12,23 +12,41 @@
         <header>
           <img
             alt="Headline image of mountain view in GTA 5"
-            src="./public/assets/funwithfriends_image.png"
+            src="../..//public/assets/funwithfriends_image.png"
             width="100%"
           >
           <div class="header-nav-container">
             <nav class="header-nav">
-              <a href="./index.html">Home</a>
-              <a href="./lib/lspdfr/lspdfr.html">LSPDFR</a>
+              <a href="../../index.html">Home</a>
+              <a href="./lspdfr.html">LSPDFR</a>
             </nav>
           </div>
         </header>
         <h1>Fun With Friends</h1>
-        <h2>Commands list</h2>
+        <h2>LSPDFR Commands List</h2>
         <ul class="controls-list"">
           <li>
             <div>
-              <h3>Basic keybinds</h3>
+              <h3>Basic LSPDFR keybinds</h3>
               <ul class="commands-list">
+                <li>
+                  • <span>F4</span> - <b>Console menu</b> (opens/closes console menu)
+                </li>
+                <li>
+                  • <span>L</span> - <b>Hide/show chat</b> (hide or show the chat menu)
+                </li>
+                <li>
+                  • <span>M</span> - <b>vMenu menu</b> (opens vMenu)
+                </li>
+                <li>
+                  • <span>L</span> - <b>Hide/show chat</b> (hide or show the chat menu)
+                </li>
+                <li>
+                  • <span>M</span> - <b>vMenu menu</b> (opens vMenu)
+                </li>
+                <li>
+                  • <span>L</span> - <b>Hide/show chat</b> (hide or show the chat menu)
+                </li>
                 <li>
                   • <span>M</span> - <b>vMenu menu</b> (opens vMenu)
                 </li>
