starting to copy some changes in

--- a/lib/lspdfr/lspdfr.html
+++ b/lib/lspdfr/lspdfr.html
@@ -33,68 +33,37 @@
                   • <span>F4</span> - <b>Console menu</b> (opens/closes console menu)
                 </li>
                 <li>
-                  • <span>L</span> - <b>Hide/show chat</b> (hide or show the chat menu)
+                  • <span>B</span> - <b>Backup</b> (opens/closes backup menu)
                 </li>
                 <li>
-                  • <span>M</span> - <b>vMenu menu</b> (opens vMenu)
+                  • <span>B</span> - <b>Crime report</b> (When spotting a crime, hold button until bar is full to report a crime)
                 </li>
                 <li>
-                  • <span>L</span> - <b>Hide/show chat</b> (hide or show the chat menu)
+                  • <span>N</span> - <b>Police car/pursuit menu</b> (opens/closes the police car/pursuit menu)
                 </li>
                 <li>
-                  • <span>M</span> - <b>vMenu menu</b> (opens vMenu)
+                  • <span>M</span> - <b>Interaction menu</b> (opens/closes interaction menu)
                 </li>
                 <li>
-                  • <span>L</span> - <b>Hide/show chat</b> (hide or show the chat menu)
+                  • <span>E</span> - <b>Cuff</b> (hold E while standing above a ped to cuff them)
                 </li>
                 <li>
-                  • <span>M</span> - <b>vMenu menu</b> (opens vMenu)
+                  • <span>Q</span> - <b>Frisk suspect</b> (frisks a suspect)
                 </li>
                 <li>
-                  • <span>L</span> - <b>Hide/show chat</b> (hide or show the chat menu)
-                </li>
-              </ul>
-            </div>
-          </li>
-          <li>
-            <div>
-              <h3>FivePD keybinds</h3>
-              <ul class="commands-list">
-                <li>
-                  • <span>F11</span> - <b>Duty menu</b> (menu to go on and off duty)
+                  • <span>E</span> - <b>Make suspect sit</b> (press E while ped cuffed to make them sit)
                 </li>
                 <li>
-                  • <span>Y</span> - <b>Accept callouts</b> (key to accept callouts from dispatch)
+                  • <span>Y</span> - <b>Answer/accept callout</b> (accepts a callout)
                 </li>
                 <li>
-                  • <span>Z</span> - <b>Callout menu</b> (menu to either request backup from your department, or call a scene/callout as Code 4 or completed)
+                  • <span>Left shift</span> - <b>Start traffic stop</b> (Tags a vehicle to attempt to stop them)
                 </li>
                 <li>
-                  • <span>G</span> - <b>Scene menu</b> (menu to place objects such as traffic cones or set a speed zone for an area)
+                  • <span>J</span> - <b>Toggle siren</b> (toggles siren, do this behind tagged vehicle to attempt to pull them over)
                 </li>
                 <li>
-                  • <span>X</span> - <b>Ped interaction menu</b> (menu to interact with pedestrians)
-                </li>
-                <li>
-                  • <span>0 (zero)</span> - <b>Waypoint to closest jail</b> (set waypoint to closest jail when arrested ped in vehicle)
-                </li>
-                <li>
-                  • <span>E</span> - <b>Place cuffed ped in vehicle</b> (when nearby cuffed ped and vehicle, places them in vehicle)
-                </li>
-                <li>
-                  • <span>Hold E (around 2 sec.)</span> - <b>Stop ped/cuff ped</b> (stops a ped or cuffs a stopped ped)
-                </li>
-                <li>
-                  • <span>LShift + E</span> - <b>Spike strips</b> (when standing by trunk of applicable police vehicle, places spike trips, or picks them up if already placed)
-                </li>
-                <li>
-                  • <span>U</span> - <b>Ped in jail</b> (when near an arrested ped at a jail drop off point, puts them in jail)
-                </li>
-                <li>
-                  • <span>J</span> - <b>ID card panel</b> (after receiving a ped's license, opens the ID card panel)
-                </li>
-                <li>
-                  • <span>F4</span> - <b>Portable MDT</b> (opens the portable MDT while in the field)
+                  • <span>Q</span> - <b>Police computer</b> (opens the police computer)
                 </li>
               </ul>
             </div>
@@ -132,46 +101,6 @@
                 </li>
                 <li>
                   • <span>NUM -</span> - <b>Decrease cruise control speed</b> (decreases the cruise control speed)
-                </li>
-              </ul>
-            </div>
-          </li>
-          <li>
-            <div>
-              <h3>AI backup keybinds</h3>
-              <ul class="commands-list">
-                <li>
-                  • <span>F10</span> - <b>AIBackup menu</b> (menu to go on duty and request backup)
-                </li>
-                <li>
-                  • <span>NUM +</span> - <b>Call backup units</b> (key to call backup units when on duty in AIBackup menu)
-                </li>
-                <li>
-                  • <span>NUM -</span> - <b>Dismiss backup units</b> (key to dismiss AI backup once all units are on scene)
-                </li>
-                <li>
-                  • <span>PageDown + aiming at Ped</span> - <b>Backup units stop aiming</b> (this combination will make backup units on scene stop aiming)
-                </li>
-                <li>
-                  • <span>PageUp</span> - <b>Backup exits vehicle</b> (key to make backup units in vehicle stop their car, exit vehicle, and come to your position when key pressed)
-                </li>
-                <li>
-                  • <span>Del</span> - <b>Dismiss backup units</b> (all backup units are dismissed)
-                </li>
-                <li>
-                  • <span>/getout i</span> - <b>Get unit out of vehicle</b> (command to get unit 'i' out of vehicle, i is a number between 1 and max number of backup units, useful if they get stuck)
-                </li>
-                <li>
-                  • <span>/getin i</span> - <b>Get unit into their vehicle</b> (command to get unit 'i' into their vehicle, i is a number between 1 and max number of backup units, useful if they get stuck)
-                </li>
-                <li>
-                  • <span>/onduty</span> - <b>Change duty status</b> (command to change status to "on duty")
-                </li>
-                <li>
-                  • <span>/offduty</span> - <b>Change duty status</b> (command to change status to "off duty")
-                </li>
-                <li>
-                  • <span>/stopNotify</span> - <b>Clear notifications</b> (command to clear top right notifications)
                 </li>
               </ul>
             </div>
