latest lspdfr documentation

--- a/lib/lspdfr/lspdfr.html
+++ b/lib/lspdfr/lspdfr.html
@@ -22,9 +22,9 @@
             </nav>
           </div>
         </header>
-        <h1>Fun With Friends</h1>
+        <h1>Fun With Friends</h1> - DELETEME STOPPED AFTER MAKING ARRESTS (https://www.lcpdfr.com/wiki/lspdfr/04/features/) DELETEME
         <h2>LSPDFR Commands List</h2>
-        <ul class="controls-list"">
+        <ul class="controls-list">
           <li>
             <div>
               <h3>Basic LSPDFR keybinds</h3>
@@ -42,7 +42,7 @@
                   • <span>N</span> - <b>Police car/pursuit menu</b> (opens/closes the police car/pursuit menu)
                 </li>
                 <li>
-                  • <span>M</span> - <b>Interaction menu</b> (opens/closes interaction menu)
+                  • <span>M</span> / hold <img src="../../public/assets/xbox-controller-icons/DPad_Left.png" width="25" /> or <img src="../../public/assets/playstation-controller-icons/dpad_left.png" width="25" /> - <b>Interaction menu</b> (opens/closes interaction menu)
                 </li>
                 <li>
                   • <span>E</span> - <b>Cuff</b> (hold E while standing above a ped to cuff them)
@@ -70,66 +70,117 @@
           </li>
           <li>
             <div>
-              <h3>Vehicle keybinds</h3>
+              <h3>LSPFR arrests and interactions</h3>
               <ul class="commands-list">
                 <li>
-                  • <span>Q</span> - <b>Toggle police lights</b> (when in police cruiser, toggles lights on and off)
+                  • Aim at ped and press <span>E</span> / hold - <img src="../../public/assets/xbox-controller-icons/DPad_Right.png" width="25" /> or <img src="../../public/assets/playstation-controller-icons/dpad_right.png" width="25" /> <b>Gunpoint takedown</b> (starts a progress bar which when filled, the suspect will comply and get down where you can then cuff them)
                 </li>
                 <li>
-                  • <span>B</span> - <b>Open MDT</b> (key to open MDT while in your vehicle in order to search peds/license plates and write citations/arrest reports)
+                  • While behind ped, press <span>Q</span> / press - <img src="../../public/assets/xbox-controller-icons/DPad_Left.png" width="25" /> or <img src="../../public/assets/playstation-controller-icons/dpad_left.png" width="25" /> <b>Arrested ped stop following</b> (makes arrested ped stop following you)
                 </li>
                 <li>
-                  • <span>LShift</span> - <b>Traffic stop</b> (positioning your police cruiser behind a vehicle and pressing this key will mark it on the minimap, once marked you can use your lights to signal for it to pull over)
+                  • While behind ped, press <span>E</span> / press - <img src="../../public/assets/xbox-controller-icons/DPad_Right.png" width="25" /> or <img src="../../public/assets/playstation-controller-icons/dpad_right.png" width="25" /> <b>Take hold of arrested ped</b> (takes hold of arrested suspect in order to move them)
                 </li>
                 <li>
-                  • <span>F9</span> - <b>Toggle ALPR</b> (while in police cruiser, this key automatic license plate reader will notify you of any vehicles that have flags on their license plate)
+                  • Aim at ped and hold <span>Q</span> / hold - <img src="../../public/assets/xbox-controller-icons/DPad_Left.png" width="25" /> or <img src="../../public/assets/playstation-controller-icons/dpad_left.png" width="25" /> <b>Pat-down frisk</b> (performs pat-down frisk of arrested suspect)
                 </li>
                 <li>
-                  • <span>X</span> - <b>Traffic stop positioning menu</b> (after pulling over vehicle, opens traffic marker controls to move vehicle)
+                  • While behind ped, hold <span>E</span> / hold - <img src="../../public/assets/xbox-controller-icons/DPad_Right.png" width="25" /> or <img src="../../public/assets/playstation-controller-icons/dpad_right.png" width="25" /> <b>Release arrested suspect</b> (release the arrested suspect)
                 </li>
                 <li>
-                  • <span>1, 2, 3</span> - <b>Siren wails</b> (toggles between primary, secondary, and tertiary siren when police cruiser lights are on)
+                  • While holding ped near rear doors, hold <span>E</span> / hold - <img src="../../public/assets/xbox-controller-icons/DPad_Right.png" width="25" /> or <img src="../../public/assets/playstation-controller-icons/dpad_right.png" width="25" /> <b>Detain in police cruiser</b> (puts arrested ped in police cruiser)
                 </li>
                 <li>
-                  • <span>O (letter)</span> - <b>Luxart menu</b> (opens the Luxart menu)
+                  • While facing door of vehicle, press <span>E</span> / press - <img src="../../public/assets/xbox-controller-icons/DPad_Right.png" width="25" /> or <img src="../../public/assets/playstation-controller-icons/dpad_right.png" width="25" /> <b>Open door of cruiser</b> (opens the door you're facing of the police cruiser)
                 </li>
                 <li>
-                  • <span>LCTRL</span> - <b>Enable/disable cruise control</b> (after enabling cruise control in the duty menu, this enables or disables cruise control)
+                  • While facing open door of vehicle, press <span>E</span> / press - <img src="../../public/assets/xbox-controller-icons/DPad_Right.png" width="25" /> or <img src="../../public/assets/playstation-controller-icons/dpad_right.png" width="25" /> <b>Tell suspect to get in vehicle</b> (makes the suspect get in the vehicle on their own)
                 </li>
                 <li>
-                  • <span>NUM +</span> - <b>Increase cruise control speed</b> (increases the cruise control speed)
-                </li>
-                <li>
-                  • <span>NUM -</span> - <b>Decrease cruise control speed</b> (decreases the cruise control speed)
+                  • While door open and ped inside, press <span>E</span> / press - <img src="../../public/assets/xbox-controller-icons/DPad_Right.png" width="25" /> or <img src="../../public/assets/playstation-controller-icons/dpad_right.png" width="25" /> <b>Remove suspect from cruiser</b> (removes the detained ped from the police cruiser)
                 </li>
               </ul>
             </div>
           </li>
           <li>
             <div>
-              <h3>Chat keybinds</h3>
+              <h3>Transporting arrested peds</h3>
               <ul class="commands-list">
                 <li>
-                  • <span>/eup</span> - <b>Emergency Uniforms Pack menu</b> (opens EUP menu to allow you to customize gear and outfits)
+                  • Transport a ped to jail yourself by going to any of the jail symbols on your map
+                </li>
+                <li>
+                  • Stand behind arrested ped and press <span>Q</span> / press - <img src="../../public/assets/xbox-controller-icons/DPad_Left.png" width="25" /> or <img src="../../public/assets/playstation-controller-icons/dpad_left.png" width="25" /> <b>Suspect sit on ground</b> (makes the arrested suspect sit on the ground)
+                </li>
+                <li>
+                  • When suspect sitting on ground, and press <span>B</span> for backup menu and call a transport unit with response type of transport - <b>Request prisoner transport</b> (requests a prisoner transport unit)
                 </li>
               </ul>
             </div>
           </li>
           <li>
             <div>
-              <h3>Terminal keybinds</h3>
+              <h3>LSPDFR Apartments</h3>
               <ul class="commands-list">
                 <li>
-                  • <span>quit</span> - <b>Quit FiveM</b> (quits the game)
+                  • <span>Pause menu</span> - <b>Allows access to your apartments</b> (LSPDFR adds 4 apartments which contain clothes, food, and your garage where you can drive a vehicle to save to. Note: You can also use interaction menu to set waypoints to your apartments)
+                </li>
+              </ul>
+            </div>
+          </li>
+          <li>
+            <div>
+              <h3>LSPFR balistic shield</h3>
+              <ul class="commands-list">
+                <li>
+                  • <span>M</span> / <img src="../../public/assets/xbox-controller-icons/DPad_Left.png" width="25" /> or <img src="../../public/assets/playstation-controller-icons/dpad_left.png" width="25" /> - <b>Using interaction menu to equip balistic shield</b> (By equiping a balistic shield you can be partially protected from bullets and other projectiles)
+                </li>
+              </ul>
+            </div>
+          </li>
+          <li>
+            <div>
+              <h3>LSPFR evidence marker</h3>
+              <ul class="commands-list">
+                <li>
+                  • <span>M</span> / <img src="../../public/assets/xbox-controller-icons/DPad_Left.png" width="25" /> or <img src="../../public/assets/playstation-controller-icons/dpad_left.png" width="25" /> - <b>Using interaction menu to put down evidence marker</b> (You can put evidence markers down, and pick them up by walking towards them and following prompts)
+                </li>
+              </ul>
+            </div>
+          </li>
+          <li>
+            <div>
+              <h3>LSPFR interaction menu</h3>
+              <ul class="commands-list">
+                <li>
+                  • Quick GPS lets you quickly set a GPS waypoint to the nearest police station, jail drop-off, fire station, medical center, or your apartment.
                 </li>
                 <li>
-                  • <span>disconnect</span> - <b>Return to FiveM main menu</b> (disconnects from server and returns to main menu)
+                  • Police Radio is only available while on duty and brings you to the Police Radio sub menu. See Police Computer & Radio for more info.
                 </li>
                 <li>
-                  • <span>restart &lt;resource_name&gt;</span> - <b>Restart resource</b> (restarts the specified resource)
+                  • Vehicle brings you to a sub menu that gives you access to some of your vehicle's functions.
                 </li>
                 <li>
-                  • <span>refresh</span> - <b>Refreshes all resources</b> (refreshes and loads all resource changes)
+                  • Inventory brings you to another sub menu with some options relating to your character's inventory.
+                </li>
+                <li>
+                  • Settings is yet another sub menu with some options for LSPDFR.
+                </li>
+                <li>
+                  • Action lets you perform a few different quick actions, such as drinking coffee or eating donuts. Press Enter to perform the action.
+                </li>
+                <li>
+                  • Dialogue lets you say various things like "Hi" or "Bye." Press Enter to say it.
+                </li>
+                <li>
+                  • Player mood changes your character's facial expression.
+                </li>
+                <li>
+                  • Walk style changes the animation your character uses for walking.
+                </li>
+                <li>
+                  • The Illuminated Clothing option allows you to control the style of any illuminated (emissive) clothing on your character's outfit.
                 </li>
               </ul>
             </div>
