add some controller bindings for lspdfr

--- a/lib/lspdfr/lspdfr.html
+++ b/lib/lspdfr/lspdfr.html
@@ -33,38 +33,51 @@
                   • <span>F4</span> - <b>Console menu</b> (opens/closes console menu)
                 </li>
                 <li>
-                  • <span>B</span> - <b>Backup</b> (opens/closes backup menu)
+                  • <span>B</span> / press <img src="../../public/assets/xbox-controller-icons/R3.png" width="25" /> or <img src="../../public/assets/playstation-controller-icons/right_analog.png" width="25" /> - <b>Backup</b> (opens/closes backup menu)
                 </li>
                 <li>
-                  • <span>B</span> - <b>Crime report</b> (When spotting a crime, hold button until bar is full to report a crime)
+                  • <span>B</span> / hold <img src="../../public/assets/xbox-controller-icons/R3.png" width="25" /> or <img src="../../public/assets/playstation-controller-icons/right_analog.png" width="25" /> - <b>Crime report</b> (When spotting a crime, hold button until bar is full to report a crime)
                 </li>
                 <li>
-                  • <span>N</span> - <b>Police car/pursuit menu</b> (opens/closes the police car/pursuit menu)
+                  • <span>N</span> / press <img src="../../public/assets/xbox-controller-icons/DPad_Down.png" width="25" /> or <img src="../../public/assets/playstation-controller-icons/dpad_down.png" width="25" /> - <b>Police car/pursuit menu</b> (opens/closes the police car/pursuit menu)
                 </li>
                 <li>
                   • <span>M</span> / hold <img src="../../public/assets/xbox-controller-icons/DPad_Left.png" width="25" /> or <img src="../../public/assets/playstation-controller-icons/dpad_left.png" width="25" /> - <b>Interaction menu</b> (opens/closes interaction menu)
                 </li>
                 <li>
-                  • <span>E</span> - <b>Cuff</b> (hold E while standing above a ped to cuff them)
+                  • <span>E</span> / hold <img src="../../public/assets/xbox-controller-icons/DPad_Right.png" width="25" /> or <img src="../../public/assets/playstation-controller-icons/dpad_right.png" width="25" /> - <b>Cuff</b> (hold E while standing above a ped to cuff them)
                 </li>
                 <li>
-                  • <span>Q</span> - <b>Frisk suspect</b> (frisks a suspect)
+                  • <span>Q</span> / hold <img src="../../public/assets/xbox-controller-icons/DPad_Left.png" width="25" /> or <img src="../../public/assets/playstation-controller-icons/dpad_left.png" width="25" /> - <b>Frisk suspect</b> (frisks a suspect)
                 </li>
                 <li>
-                  • <span>E</span> - <b>Make suspect sit</b> (press E while ped cuffed to make them sit)
+                  • <span>E</span> / hold <img src="../../public/assets/xbox-controller-icons/DPad_Right.png" width="25" /> or <img src="../../public/assets/playstation-controller-icons/dpad_right.png" width="25" /> - <b>Stop ped</b> (stops a ped)
                 </li>
                 <li>
-                  • <span>Y</span> - <b>Answer/accept callout</b> (accepts a callout)
+                  • <span>E</span> / press <img src="../../public/assets/xbox-controller-icons/DPad_Right.png" width="25" /> or <img src="../../public/assets/playstation-controller-icons/dpad_right.png" width="25" />- <b>Make suspect sit</b> (press E while ped cuffed to make them sit)
                 </li>
                 <li>
-                  • <span>Left shift</span> - <b>Start traffic stop</b> (Tags a vehicle to attempt to stop them)
+                  • <span>Y</span> / press <img src="../../public/assets/xbox-controller-icons/DPad_Left.png" width="25" /> or <img src="../../public/assets/playstation-controller-icons/dpad_left.png" width="25" /> - <b>Answer/accept callout</b> (accepts a callout)
                 </li>
                 <li>
-                  • <span>J</span> - <b>Toggle siren</b> (toggles siren, do this behind tagged vehicle to attempt to pull them over)
+                  • <span>Left shift</span> / press <img src="../../public/assets/xbox-controller-icons/A.png" width="25" /> or <img src="../../public/assets/playstation-controller-icons/x.png" width="25" />- <b>Start traffic stop</b> (Tags a vehicle to attempt to stop them)
                 </li>
                 <li>
-                  • <span>Q</span> - <b>Police computer</b> (opens the police computer)
+                  • <span>J</span> / press hold <img src="../../public/assets/xbox-controller-icons/L3.png" width="25" /> or <img src="../../public/assets/playstation-controller-icons/left_analog.png" width="25" /> - <b>Toggle siren</b> (toggles siren, do this behind tagged vehicle to attempt to pull them over)
                 </li>
+                <li>
+                  • <span>Q</span> / press <img src="../../public/assets/xbox-controller-icons/X.png" width="25" /> or <img src="../../public/assets/playstation-controller-icons/square.png" width="25" /> - <b>Police computer</b> (opens the police computer)
+                </li>
+              </ul>
+            </div>
+          </li>
+          <li>
+            <div>
+              <h3>LSPFR vehicle interactions</h3>
+              <ul class="commands-list">
+                <!-- <li>
+                  • <span>G</span> / hold - <img src="../../public/assets/xbox-controller-icons/DPad_Right.png" width="25" /> or <img src="../../public/assets/playstation-controller-icons/dpad_right.png" width="25" /> <b>Abort or join chase</b> (starts a progress bar which when filled, the suspect will comply and get down where you can then cuff them)
+                </li> -->
               </ul>
             </div>
           </li>
