finish adding controller inputs for default lspdfr bindings

--- a/lib/lspdfr/lspdfr.html
+++ b/lib/lspdfr/lspdfr.html
@@ -126,7 +126,7 @@
                   • Stand behind arrested ped and press <span>Q</span> / press - <img src="../../public/assets/xbox-controller-icons/DPad_Left.png" width="25" /> or <img src="../../public/assets/playstation-controller-icons/dpad_left.png" width="25" /> <b>Suspect sit on ground</b> (makes the arrested suspect sit on the ground)
                 </li>
                 <li>
-                  • When suspect sitting on ground, and press <span>B</span> for backup menu and call a transport unit with response type of transport - <b>Request prisoner transport</b> (requests a prisoner transport unit)
+                  • When suspect sitting on ground, and press <span>B</span> / press <img src="../../public/assets/xbox-controller-icons/R3.png" width="25" /> or <img src="../../public/assets/playstation-controller-icons/right_analog.png" width="25" /> for backup menu and call a transport unit with response type of transport - <b>Request prisoner transport</b> (requests a prisoner transport unit)
                 </li>
               </ul>
             </div>
@@ -136,7 +136,7 @@
               <h3>LSPDFR Apartments</h3>
               <ul class="commands-list">
                 <li>
-                  • <span>Pause menu</span> - <b>Allows access to your apartments</b> (LSPDFR adds 4 apartments which contain clothes, food, and your garage where you can drive a vehicle to save to. Note: You can also use interaction menu to set waypoints to your apartments)
+                  • <span>Pause menu (ESC) </span> / press <img src="../../public/assets/xbox-controller-icons/Start.png" width="25" /> or options (PS5) - <b>Allows access to your apartments</b> (LSPDFR adds 4 apartments which contain clothes, food, and your garage where you can drive a vehicle to save to. Note: You can also use interaction menu to set waypoints to your apartments)
                 </li>
               </ul>
             </div>
